Working on the public interface

--- a/bipolar_server/toggle/templates/base.html
+++ b/bipolar_server/toggle/templates/base.html
@@ -66,5 +66,6 @@
 
         <script type="text/javascript" src="/static/js/libs/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="/static/js/groundwork.all.js"></script>
+        {% block body_post_scripts %}{% endblock %}
     </body>
 </html>
