--- a/bipolar_server/toggle/templates/account_form.html
+++ b/bipolar_server/toggle/templates/account_form.html
@@ -7,8 +7,8 @@
 
     <form class="row" method="post">
         {% csrf_token %}
-        <div class="row {% if form.name.errors %}invalid{% endif %}">
-            <div class="one third padded">
+        <div class="row">
+            <div class="one third padded {% if form.name.errors %}invalid{% endif %}">
                 <label for="name">Name {% if form.name.errors %}<span class="error">{{ form.name.errors.0 }}</span>{% endif %}</label>
                 {{ form.name }}
             </div>
