--- a/bipolar_server/toggle/templates/base.html
+++ b/bipolar_server/toggle/templates/base.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <div class="row">
                     <div class="one half">
-                        <h1 class="zero museo-slab">Bipolar</h1>
+                        <h1 class="zero quicksand">Bipolar</h1>
                         <p class="quicksand">agnostic features toggle micro service</p>
                     </div>
                     <div class="one half">
