Links with correct URLs

--- a/bipolar_server/toggle/templates/account_view.html
+++ b/bipolar_server/toggle/templates/account_view.html
@@ -105,10 +105,10 @@
         </p>
 
         <div class="row">
-            <p class="fourth align-center"><a href="http://github.com/marinho/bipolar-server/wiki/GettingStarted" target="_blank">Getting started</a></p>
-            <p class="fourth align-center"><a href="http://github.com/marinho/bipolar-server/wiki/Clients" target="_blank">Clients</a></p>
-            <p class="fourth align-center"><a href="http://github.com/marinho/bipolar-server/wiki/" target="_blank">Documentation</a></p>
-            <p class="fourth align-center"><a href="http://github.com/marinho/bipolar-server" target="_blank" title="@bipolar-server">GitHub</a></p>
+            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server/wiki/GettingStarted" target="_blank">Getting started</a></p>
+            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server/wiki/Clients" target="_blank">Clients</a></p>
+            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server/wiki/" target="_blank">Documentation</a></p>
+            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server" target="_blank" title="@bipolar-server">GitHub</a></p>
         </div>
     </div>
 </div>
