--- a/bipolar_server/toggle/templates/index.html
+++ b/bipolar_server/toggle/templates/index.html
@@ -33,8 +33,8 @@
             <h3>Documentation</h3>
 
             <ol class="list padded">
-                <li class="alert"><a href="#" class="medium">Getting started</a></li>
-                <li class="alert"><a href="#" class="medium">Clients</a></li>
+                <li class="alert"><a href="https://github.com/marinho/bipolar-server/wiki/GettingStarted" class="medium">Getting started</a></li>
+                <li class="alert"><a href="https://github.com/marinho/bipolar-server/wiki/Clients" class="medium">Clients</a></li>
             </ol>
         </div>
     </div>
