--- a/bipolar_server/toggle/templates/base.html
+++ b/bipolar_server/toggle/templates/base.html
@@ -26,8 +26,8 @@
                     </div>
                     <div class="one half">
                         <p class="small double-pad-top no-pad-small-tablet align-right align-left-small-tablet">
-                            <a href="https://github.com/marinho/bipolar" target="_parent">Github Project</a>
-                            - Version {{ BIPOLAR_VERSION }}<br>
+                            <a href="https://marinho.github.io/bipolar-server" target="_parent">Website</a> -
+                            Version {{ BIPOLAR_VERSION }}<br>
                             by <a href="http://twitter.com/marinhobrandao" target="_blank">Marinho Brandao</a>
                         </p>
                     </div>
