--- a/bipolar_server/toggle/templates/account_view.html
+++ b/bipolar_server/toggle/templates/account_view.html
@@ -105,9 +105,9 @@
         </p>
 
         <div class="row">
-            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server/wiki/GettingStarted" target="_blank">Getting started</a></p>
-            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server/wiki/Clients" target="_blank">Clients</a></p>
-            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server/wiki/" target="_blank">Documentation</a></p>
+            <p class="fourth align-center"><a href="//marinho.github.io/bipolar-server/docs/getting-started.html" target="_blank">Getting started</a></p>
+            <p class="fourth align-center"><a href="//marinho.github.io/bipolar-server/docs/clients.html" target="_blank">Clients</a></p>
+            <p class="fourth align-center"><a href="//marinho.github.io/bipolar-server/docs/" target="_blank">Documentation</a></p>
             <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server" target="_blank" title="@bipolar-server">GitHub</a></p>
         </div>
     </div>
