Using ReadTheDocs for docs

--- a/bipolar_server/toggle/templates/account_view.html
+++ b/bipolar_server/toggle/templates/account_view.html
@@ -105,10 +105,10 @@
         </p>
 
         <div class="row">
-            <p class="fourth align-center"><a href="//marinho.github.io/bipolar-server/docs/getting-started.html" target="_blank">Getting started</a></p>
-            <p class="fourth align-center"><a href="//marinho.github.io/bipolar-server/docs/clients.html" target="_blank">Clients</a></p>
-            <p class="fourth align-center"><a href="//marinho.github.io/bipolar-server/docs/" target="_blank">Documentation</a></p>
-            <p class="fourth align-center"><a href="https://github.com/marinho/bipolar-server" target="_blank" title="@bipolar-server">GitHub</a></p>
+            <p class="fourth align-center"><a href="//bipolar-server.readthedocs.org/en/latest/getting-started.html" target="_blank">Getting started</a></p>
+            <p class="fourth align-center"><a href="//bipolar-server.readthedocs.org/en/latest/clients.html" target="_blank">Clients</a></p>
+            <p class="fourth align-center"><a href="//bipolar-server.readthedocs.org/en/latest/" target="_blank">Documentation</a></p>
+            <p class="fourth align-center"><a href="//github.com/marinho/bipolar-server" target="_blank" title="@bipolar-server">GitHub</a></p>
         </div>
     </div>
 </div>
