--- a/bipolar_server/toggle/templates/index.html
+++ b/bipolar_server/toggle/templates/index.html
@@ -33,9 +33,9 @@
             <h3>Documentation</h3>
 
             <ol class="list padded">
-                <li class="alert"><a href="//marinho.github.io/bipolar-server/docs/getting-started.html" class="medium">Getting started</a></li>
-                <li class="alert"><a href="//marinho.github.io/bipolar-server/docs/clients.html" class="medium">Clients</a></li>
-                <li class="alert"><a href="//marinho.github.io/bipolar-server/docs/" class="medium">Index</a></li>
+                <li class="alert"><a href="//bipolar-server.readthedocs.org/en/latest/getting-started.html" class="medium">Getting started</a></li>
+                <li class="alert"><a href="//bipolar-server.readthedocs.org/en/latest/clients.html" class="medium">Clients</a></li>
+                <li class="alert"><a href="//bipolar-server.readthedocs.org/en/latest/" class="medium">Index</a></li>
             </ol>
         </div>
     </div>
