--- a/bipolar_server/toggle/templates/base.html
+++ b/bipolar_server/toggle/templates/base.html
@@ -14,6 +14,7 @@
         <link type="text/css" rel="stylesheet" href="/static/css/groundwork-anim.css">
         <link type="text/css" rel="stylesheet" href="/static/css/groundwork-ie.css">
         <![endif]-->
+        <link type="text/css" rel="stylesheet" href="/static/css/bipolar.css">
     </head>
 
     <body>
@@ -65,6 +66,7 @@
         </footer>
 
         <script type="text/javascript" src="/static/js/libs/jquery-1.10.2.min.js"></script>
+        <script type="text/javascript" src="/static/js/libs/typeahead.bundle.js"></script>
         <script type="text/javascript" src="/static/js/groundwork.all.js"></script>
         {% block body_post_scripts %}{% endblock %}
     </body>
